# autodev

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION.md  LICENSE  Makefile  NOTICE  README.md  autodev.config.example.json  mypy.ini
backend/: .gitkeep  __init__.py  cli.py  pyproject.toml  requirements.txt
backend/agents/: .gitkeep  __init__.py  base.py  capabilities.py  contracts.py  contracts_ext.py  manifest.py  provider.py  registry.py  registry_v2.py  runtime.py  tools.py
backend/api/: .gitkeep  main.py  rbac_v2.py  security.py  security_headers.py  timeline_roles.py  v2_common.py
backend/artifacts/: __init__.py  cleanup.py  pointers.py  store.py
backend/cli_plugins/: __init__.py  agents.py  evals.py  patches.py  plans.py  skills.py  validation.py
backend/config/: __init__.py  runtime.py  settings.py
backend/context/: __init__.py  composer.py  provider.py
backend/coordination/: __init__.py  redis.py
backend/evals/: __init__.py  contract.py  dataset_loader.py  expressions.py  results.py  runner.py  service.py  spec.py
backend/events/: __init__.py  bus.py  catalog.py  records.py  runtime.py  store.py
backend/flows/: __init__.py  activation.py  budgets.py  checkpoint.py  composite.py  engine.py  expressions.py  fields.py  graph.py  handlers.py  human.py  manifest.py  model.py  pause.py  records.py  registry.py  schema_sql.py  state.py  triggers.py
backend/graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  (+1 more)
(+667 files in other folders)
