[project]
name = "autodev-backend"
version = "0.1.0"
description = "Backend services for the AutoDev Architect platform"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "AutoDev Team" }
]
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
